--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -173,4 +173,5 @@
     <color name="color_9FADC6_A5A9B3">@color/color_9FADC6</color>
     <color name="color_191D2F_F3F9FF">@color/color_191D2F</color>
     <color name="color_181922_F0F5FA">@color/color_181922</color>
+    <color name="color_79839F_6C7BA8">@color/color_79839F</color>
 </resources>
