--- a/app/src/main/res/layout/activity_self_limit.xml
+++ b/app/src/main/res/layout/activity_self_limit.xml
@@ -15,6 +15,7 @@
         android:layout_height="0.5dp"/>
     <org.cxct.sportlottery.ui.common.CustomTabLayout
         android:id="@+id/custom_tab_layout"
+        android:paddingHorizontal="65dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:firstTabText="@string/self_limit_account_login_limit"
