--- a/app/src/main/res/layout/fragment_self_limit_bet.xml
+++ b/app/src/main/res/layout/fragment_self_limit_bet.xml
@@ -31,8 +31,8 @@
                 android:layout_marginTop="@dimen/margin_10"
                 android:layout_marginBottom="@dimen/margin_10"
                 android:text="@string/self_limit_per_bet_limit"
-                android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize13sp"
+                android:textColor="@color/color_D2E4FF_414655"
+                android:textSize="@dimen/textSize16sp"
                 android:textStyle="bold" />
 
             <View
@@ -48,7 +48,7 @@
                 android:layout_marginRight="@dimen/margin_14"
                 android:layout_marginBottom="@dimen/margin_10"
                 android:text="@string/self_limit_per_bet_limit_content"
-                android:textColor="@color/color_BBBBBB_333333"
+                android:textColor="@color/color_79839F_6C7BA8"
                 android:textSize="@dimen/textSize12sp" />
 
             <LinearLayout
@@ -68,15 +68,16 @@
                     android:layout_marginLeft="@dimen/margin_14"
                     android:layout_weight="1"
                     android:text="@string/self_limit_impotent"
-                    android:textColor="@color/color_FFFFFF_414655"
+                    android:textColor="@color/color_D2E4FF_414655"
                     android:textSize="@dimen/textSize13sp"
                     android:textStyle="bold" />
 
                 <ImageView
-                    android:layout_width="@dimen/margin_16"
-                    android:layout_height="@dimen/margin_16"
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="@dimen/margin_14"
+                    android:layout_height="@dimen/margin_14"
                     android:layout_marginRight="@dimen/margin_14"
-                    android:src="@drawable/ic_icon_exp" />
+                    android:src="@drawable/icon_exp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -108,7 +109,7 @@
                 android:layout_marginEnd="@dimen/margin_10"
                 android:minWidth="62dp"
                 android:text="@string/self_limit_per_bet_limit_highest"
-                android:textColor="@color/color_9BB3D9_535D76"
+                android:textColor="@color/color_9FADC6_535D76"
                 android:textSize="@dimen/textSize13sp"
                 android:textStyle="bold" />
 
@@ -124,7 +125,7 @@
                 android:hint="@string/self_limit_per_bet_limit_input_highest"
                 android:inputType="number"
                 android:textColor="@color/color_BBBBBB_333333"
-                android:textColorHint="@color/color_404040_cccccc"
+                android:textColorHint="@color/color_C9CFD7"
                 android:textSize="@dimen/textSize12sp" />
 
 
@@ -143,6 +144,7 @@
         android:visibility="gone" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_marginTop="@dimen/margin_10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
@@ -150,7 +152,6 @@
             android:id="@+id/tvDot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:textColor="@color/color_E44438_e44438"
             android:textSize="@dimen/textSize12sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -160,7 +161,6 @@
             android:id="@+id/tvPerBetLimit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_8"
             android:layout_marginHorizontal="@dimen/margin_15"
             android:text="@string/self_limit_per_bet_limit_user"
             android:textColor="@color/color_E44438_e44438"
@@ -172,7 +172,6 @@
             android:id="@+id/tvLimit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_6"
             android:layout_marginHorizontal="@dimen/margin_15"
             android:text="@string/self_limit_per_bet_limit_user_limit"
             android:textColor="@color/color_E44438_e44438"
