--- a/app/src/main/res/layout/fragment_self_limit_froze.xml
+++ b/app/src/main/res/layout/fragment_self_limit_froze.xml
@@ -31,8 +31,8 @@
                 android:layout_marginTop="@dimen/margin_10"
                 android:layout_marginBottom="@dimen/margin_10"
                 android:text="@string/self_limit_account_login_limit"
-                android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize13sp"
+                android:textColor="@color/color_D2E4FF_414655"
+                android:textSize="@dimen/textSize16sp"
                 android:textStyle="bold" />
 
             <View
@@ -51,7 +51,7 @@
                 android:layout_marginBottom="@dimen/margin_10"
                 android:lineSpacingExtra="8dp"
                 android:text="@string/self_limit_froze_content"
-                android:textColor="@color/color_BBBBBB_333333"
+                android:textColor="@color/color_79839F_6C7BA8"
                 android:textSize="@dimen/textSize12sp" />
 
             <LinearLayout
@@ -71,14 +71,14 @@
                     android:layout_marginLeft="@dimen/margin_14"
                     android:layout_weight="1"
                     android:text="@string/self_limit_impotent"
-                    android:textColor="@color/color_FFFFFF_414655"
+                    android:textColor="@color/color_D2E4FF_414655"
                     android:textSize="@dimen/textSize13sp" />
 
                 <ImageView
-                    android:layout_width="@dimen/margin_16"
-                    android:layout_height="@dimen/margin_16"
+                    android:layout_width="@dimen/margin_14"
+                    android:layout_height="@dimen/margin_14"
                     android:layout_marginRight="@dimen/margin_14"
-                    android:src="@drawable/ic_icon_exp" />
+                    android:src="@drawable/icon_exp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -106,11 +106,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/margin_10"
+                android:layout_marginStart="@dimen/margin_20"
                 android:layout_marginEnd="@dimen/margin_10"
                 android:minWidth="62dp"
                 android:text="@string/self_limit_froze_days"
-                android:textColor="@color/color_9BB3D9_535D76"
+                android:textColor="@color/color_9FADC6_535D76"
                 android:textSize="@dimen/textSize14sp" />
 
 
@@ -126,7 +126,7 @@
                 android:inputType="number"
                 android:maxLength="8"
                 android:textColor="@color/color_BBBBBB_333333"
-                android:textColorHint="@color/color_404040_cccccc"
+                android:textColorHint="@color/color_C9CFD7"
                 android:textSize="@dimen/textSize12sp" />
 
 
