--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -106,7 +106,12 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">@dimen/textSize14sp</item>
     </style>
-
+    <style name="NoCaseTab" parent="TextAppearance.Design.Tab">
+        <item name="android:textStyle">normal</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">@dimen/textSize16sp</item>
+    </style>
     <style name="StyleOddButtonLL">
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:layout_marginBottom">5dp</item>
