--- a/app/src/main/res/layout/activity_recharge_log.xml
+++ b/app/src/main/res/layout/activity_recharge_log.xml
@@ -23,7 +23,7 @@
         app:minusDays="6" />
 
     <LinearLayout
-        android:layout_marginTop="@dimen/margin_10"
+
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="44dp"
@@ -66,7 +66,7 @@
         android:background="@drawable/bg_square_shape_6dp_gray_deposit_stroke"
         android:orientation="vertical"
         android:paddingBottom="@dimen/margin_3"
-        android:layout_marginTop="@dimen/margin_10"
+        android:layout_marginTop="@dimen/margin_14"
         app:layout_constraintTop_toBottomOf="@id/linearLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -89,7 +89,7 @@
                 android:maxLines="1"
                 android:paddingStart="2dp"
                 android:text="@string/recharge_log_order_time"
-                android:textColor="@color/color_414655"
+                android:textColor="@color/color_D2E4FF_414655"
                 android:textSize="@dimen/textSize12sp" />
 
             <TextView
@@ -101,7 +101,7 @@
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@string/recharge_log_recharge_amount"
-                android:textColor="@color/color_414655"
+                android:textColor="@color/color_D2E4FF_414655"
                 android:textSize="@dimen/textSize12sp" />
 
             <TextView
@@ -112,7 +112,7 @@
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@string/recharge_log_channel_type"
-                android:textColor="@color/color_414655"
+                android:textColor="@color/color_D2E4FF_414655"
                 android:textSize="@dimen/textSize12sp" />
 
             <TextView
@@ -123,7 +123,7 @@
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="@string/recharge_log_order_state"
-                android:textColor="@color/color_414655"
+                android:textColor="@color/color_D2E4FF_414655"
                 android:textSize="@dimen/textSize12sp" />
         </LinearLayout>
 
