1.建议反馈-反馈记录UI走查修改 2.注单历史点击闪退处理

--- a/app/src/main/res/layout/activity_account_history_log.xml
+++ b/app/src/main/res/layout/activity_account_history_log.xml
@@ -26,8 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:background="@color/color_2B3859_F3F9FF"
-        app:layout_constraintTop_toBottomOf="@id/date_range_selector"
-        android:layout_marginTop="@dimen/margin_20">
+        app:layout_constraintTop_toBottomOf="@id/date_range_selector">
 
         <org.cxct.sportlottery.ui.component.StatusSpinnerView
             android:id="@+id/selector_order_status"
