--- a/app/src/main/res/layout/dialog_bottom_sheet_calendar.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_calendar.xml
@@ -10,7 +10,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="@dimen/margin_20"
         android:layout_marginBottom="@dimen/margin_20"
