--- a/awesome-calendar/src/main/res/drawable/green_circle.xml
+++ b/awesome-calendar/src/main/res/drawable/green_circle.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+    android:shape="oval">
     <size
-        android:height="@dimen/text_size_date"
-        android:width="@dimen/dayOfMonthBoxSize" />
-    <corners android:radius="25dp" />
+        android:height="1dp"
+        android:width="1dp" />
+
     <solid android:color="@color/selected_date_circle_color" />
 
 </shape>
