--- a/app/src/main/res/layout/button_odd_detail.xml
+++ b/app/src/main/res/layout/button_odd_detail.xml
@@ -6,16 +6,17 @@
     android:padding="3dp">
 
     <FrameLayout
-        android:id="@+id/button_odd_detail"
         android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_gravity="center_vertical"
-        android:background="@drawable/selector_button_radius_4_odds">
+        >
 
 
         <LinearLayout
+            android:id="@+id/button_odd_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/selector_button_radius_4_odds"
             android:paddingHorizontal="6dp"
             android:gravity="center"
             android:orientation="horizontal"
@@ -47,10 +48,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/din_font"
-                    android:textStyle="bold"
                     android:maxLines="1"
                     android:textColor="@color/selector_button_odd_top_text"
                     android:textSize="@dimen/textSize14sp"
+                    android:textStyle="bold"
                     tools:text="-0.5/1"
                     tools:textColor="@color/color_6C7BA8" />
 
@@ -58,7 +59,6 @@
 
 
             <LinearLayout
-                android:id="@+id/lin_odd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center">
