--- a/app/src/main/res/layout/button_odd_home.xml
+++ b/app/src/main/res/layout/button_odd_home.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/button_odd_detail"
     android:layout_width="match_parent"
     android:layout_height="26dp"
-    android:layout_gravity="center_vertical"
-    android:background="@drawable/selector_button_radius_4_odds">
+    android:layout_gravity="center_vertical">
 
 
     <LinearLayout
+        android:id="@+id/button_odd_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/selector_button_radius_4_odds"
         android:paddingHorizontal="6dp"
         android:gravity="center"
-            android:orientation="horizontal"
+        android:orientation="horizontal"
             tools:ignore="SpUsage">
 
             <LinearLayout
