--- a/app/src/main/res/layout/view_no_record.xml
+++ b/app/src/main/res/layout/view_no_record.xml
@@ -8,19 +8,19 @@
 
     <ImageView
         android:id="@+id/list_no_record_img"
-        android:layout_width="256dp"
-        android:layout_height="400dp"
-       android:layout_marginTop="-20dp"
-        android:src="@drawable/ic_default_map"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_50"
+        android:src="@drawable/icon_no_list_data_img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:visibility="gone"
+
         android:id="@+id/list_no_record_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="-25dp"
         android:text="@string/finance_list_no_record"
         android:textColor="@color/color_6C7BA8_A7B2C4"
         android:textSize="@dimen/textSize16sp"
