--- a/app/src/main/res/layout/activity_account_history_log.xml
+++ b/app/src/main/res/layout/activity_account_history_log.xml
@@ -15,7 +15,7 @@
         app:minusDays="8" />
     <View
         android:id="@+id/view"
-        android:background="@color/color_E3E8EE"
+        android:background="@color/color_181922_F0F5FA"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -54,7 +54,7 @@
             <LinearLayout
                 android:id="@+id/rech_log_column"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/margin_36"
                 android:layout_marginLeft="@dimen/margin_1"
                 android:layout_marginTop="@dimen/margin_1"
                 android:layout_marginRight="@dimen/margin_1"
