--- a/app/src/main/res/layout/activity_recharge_log.xml
+++ b/app/src/main/res/layout/activity_recharge_log.xml
@@ -37,6 +37,7 @@
             android:layout_weight="1"
             android:background="#F3F9FF"
             app:defaultStatusText="@string/all_order_status"
+            app:listWidth="120dp"
             app:layout_constraintTop_toBottomOf="@id/date_range_selector"
             app:textColor="#6C7BA8"
             app:listBackground="@drawable/bg_pop_up_arrow" />
@@ -53,6 +54,7 @@
             android:layout_height="44dp"
             android:layout_weight="1"
             android:background="#F3F9FF"
+            app:listWidth="120dp"
             app:defaultStatusText="@string/log_type_all"
             app:layout_constraintTop_toBottomOf="@id/date_range_selector"
             app:textColor="#6C7BA8"
