--- a/app/src/main/res/layout/component_date_range_new_selector.xml
+++ b/app/src/main/res/layout/component_date_range_new_selector.xml
@@ -59,6 +59,7 @@
             android:hint="@string/hint_birth_date"
             android:fontFamily="@font/din_font"
             android:textFontWeight="500"
+            android:textStyle="bold"
             android:textColor="@color/color_9FADC6_535D76"
             android:textSize="@dimen/textSize14sp"
             android:layout_alignParentLeft="true"
@@ -99,6 +100,7 @@
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
             android:fontFamily="@font/din_font"
+            android:textStyle="bold"
             android:textFontWeight="500"
             android:hint="@string/hint_birth_date"
             android:textColor="@color/color_9FADC6_535D76"
