1.时间格式修改 2.转换记录UI和loading修改

--- a/app/src/main/res/layout/item_money_transfer_history.xml
+++ b/app/src/main/res/layout/item_money_transfer_history.xml
@@ -40,7 +40,7 @@
                 android:textSize="@dimen/textSize12sp"
                 app:autoSizeMaxTextSize="@dimen/textSize12sp"
                 app:autoSizeMinTextSize="@dimen/textSize8sp"
-                app:dateTime="@{row.addTime}"
+                app:dateChangeLineTime="@{row.addTime}"
                 tools:text="2020/12/12\n19:58:22" />
 
             <TextView
