--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -221,8 +221,9 @@
                                 android:id="@+id/league_odd_match_score_home"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:textColor="@color/color_414655"
+                                android:textFontWeight="700"
                                 android:textSize="14sp"
                                 tools:text="999" />
                         </LinearLayout>
@@ -361,8 +362,9 @@
                                 android:id="@+id/league_odd_match_score_away"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:fontFamily="@font/din_font"
+                                android:fontFamily="@font/din_regular"
                                 android:textColor="@color/color_414655"
+                                android:textFontWeight="700"
                                 android:textSize="14sp"
                                 tools:text="999" />
 
