--- a/app/src/main/res/layout/button_odd.xml
+++ b/app/src/main/res/layout/button_odd.xml
@@ -74,8 +74,8 @@
                 android:includeFontPadding="false"
                 android:textColor="@color/selector_button_odd_bottom_text"
                 android:textSize="@dimen/textSize14sp"
-                android:fontFamily="@font/din_font"
-                android:textStyle="bold"
+                android:fontFamily="@font/din_regular"
+                android:textFontWeight="700"
                 android:text="1.067" />
         </LinearLayout>
 
