--- a/app/src/main/res/layout/button_odd_outright.xml
+++ b/app/src/main/res/layout/button_odd_outright.xml
@@ -79,11 +79,11 @@
                 android:id="@+id/tv_odds"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/din_font"
                 android:includeFontPadding="false"
                 android:textColor="@color/selector_outright_button_odd_bottom_text"
                 android:textSize="@dimen/textSize15sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/din_regular"
+                android:textFontWeight="700"
                 tools:text="1.067" />
         </LinearLayout>
 
