--- a/app/src/main/res/layout/dialog_verify_identity.xml
+++ b/app/src/main/res/layout/dialog_verify_identity.xml
@@ -30,7 +30,8 @@
             android:layout_height="14dp"
             android:layout_gravity="end"
             android:layout_marginTop="9dp"
-            android:layout_marginEnd="14dp"
+            android:layout_marginEnd="9dp"
+            android:scaleType="fitXY"
             android:background="@null"
             android:contentDescription="@null"
             android:src="@drawable/ic_icon_close" />
